# ALFAssay

./: README.md  Visualisation.py  pyproject.toml
DataHarmonization/: DataHarmonization.py
DataHarmonization/Rscripts/: createGenomicBins.R
DataHarmonization/data/: 100k_bin_hg38.csv  1mb_bin_hg38.csv  5mb_bin_hg38.csv  chr_arm.csv  mappabilityBins-5000k.rds  (+1 more)
DataSummary/: DataWrapper.py  data_sorted_short.csv  data_sorted_short_Training.csv  data_sorted_short_Validation.csv  runSummary.py  summaryPerSample.py  summary_per_bin.py
FeatureEngineering/: CONSTANTS.py  gather_meta_data.py  prepare_features.py
FragmentsManipulations/: FragmentSizeCountMultiprocess.py  example_run.py  runFragmentSizeCountMultiprocess.py  run_example_schjob.sh
NNModel/: CONSTANTS.py  DataWrapperNN.py  ModelParameters.py  NNModel.py  NNWrapper.py  Visualisation.py  main.py  predict_tf.py  preprocessing_data.py  utils.py
bashScripts/: concatFragmentSizesOnWindows.sh
helpers/: CONSTANTS.py  gather_meta_data.py  merge_studies_data.py  utils.py
refdata/: HighConfidenceGenomicRegions.csv  HighConfidenceGenomicRegions_hg38.csv  HighConfidenceGenomicRegions_hg38_90.csv  HighConfidenceGenomicRegions_hg38_v2.csv  amp_segments.bed  hg19_gaps  hg38_gaps  hg38_no_gaps  unmasked_cognates_of_masked_CEN_PAR.csv  wgEncodeDukeMapabilityRegionsExcludable_hg38.bed
test/: testMultiprocessing.py
validations/: assess_lod_insilico.py  calculate_cutoff.py  calculate_cutoff_fragle.py  calculate_cutoff_regression.py  check_predictions.py  classification_model.py  classification_model_2.py  classification_model_3.py  classification_model_4.py  classification_model_5.py  classifier_predictions_ichorTF_as_truth.tsv  compare_metrics_stat.py  correlations.py  create_spikein_silico.py  data_sorted_short_meta.csv  regression_results_short.csv  regression_results_short_t26.csv  regression_results_short_t35.csv  roc_alfa_regression.py  roc_grid_ocno_ichor.py  roc_oncodna.py  simple_model_check.py
(+127 files in other folders)
