[project]
name = "bio-ml-project"
version = "0.1.0"
description = "Bioinformatics and Machine Learning project"
readme = "README.md"
# Set to >=3.9 to ensure compatibility with your specific versions of numpy and torch
requires-python = ">=3.9, <3.12"

dependencies = [
    "absl-py==2.2.2",
    "anyio==4.9.0",
    "bio==1.6.2",
    "biopython==1.85",
    "biothings-client==0.4.1",
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "contourpy==1.3.0",
    "cycler==0.12.1",
    "exceptiongroup==1.2.2",
    "filelock==3.18.0",
    "fonttools==4.57.0",
    "fsspec==2025.3.2",
    "gprofiler-official==1.0.0",
    "grpcio==1.71.0",
    "h11==0.14.0",
    "httpcore==1.0.7",
    "httpx==0.28.1",
    "idna==3.10",
    "importlib-metadata==8.6.1",
    "importlib-resources==6.5.2",
    "jinja2==3.1.6",
    "joblib==1.4.2",
    "kiwisolver==1.4.7",
    "Markdown==3.7",
    "MarkupSafe==3.0.2",
    "matplotlib==3.9.4",
    "mpmath==1.3.0",
    "mygene==3.2.2",
    "natsort==8.4.0",
    "ncls==0.0.68",
    "networkx==3.2.1",
    "numpy==1.24.1",
    "packaging==24.2",
    "pandas==2.2.3",
    "patsy==1.0.1",
    "pillow==11.1.0",
    "platformdirs==4.3.7",
    "pooch==1.8.2",
    "protobuf==6.30.2",
    "pyparsing==3.2.3",
    "pyranges==0.1.4",
    "pysam==0.23.0",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "requests==2.32.3",
    "scikit-learn==1.6.1",
    "scipy==1.13.1",
    "seaborn==0.13.2",
    "setuptools<70",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sorted-nearest==0.0.39",
    "statsmodels==0.14.5",
    "sympy==1.13.3",
    "tabulate==0.9.0",
    "tensorboard==2.19.0",
    "tensorboard-data-server==0.7.2",
    "threadpoolctl==3.6.0",
    "torch==2.2.2",
    "torchvision==0.17.2",
    "tqdm==4.67.1",
    "typing-extensions==4.13.0",
    "tzdata==2025.2",
    "urllib3==2.3.0",
    "werkzeug==3.1.3",
    "zipp==3.21.0",
]